--- a/research/ExamDynamics/Vaccination.ipynb
+++ b/research/ExamDynamics/Vaccination.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examination Dynamics EDOs Study\n",
+    "# Vaccination Dynamics EDOs Study\n",
     "\n",
     "This jupyter notebook shows how periodic examinations affect a pandemy evolution.\n",
     "\n",
@@ -98,7 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandasgui import show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +137,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "if OS == 'Linux':    \n",
-    "    %matplotlib tk\n",
+    "    #%matplotlib tk\n",
+    "    #%matplotlib qt5\n",
     "    print('Linux')\n",
     "elif OS == 'Windows': \n",
     "    %matplotlib qt\n",
@@ -137,9 +147,10 @@
     "    print('OS not detected :-|')\n",
     "\n",
     "\n",
-    "from class_SEIRQ import SEIR\n",
+    "from class_SEIRTQM import SEIRTQM\n",
     "from Quarantine import Quarantine\n",
-    "from Quarantine import Exams"
+    "from Quarantine import Exams\n",
+    "import Events"
    ]
   },
   {
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,20 +201,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Single simulation study"
+    "# Single simulation study\n",
+    "We'll vaccine 1/4 th of the population."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "examrate = 20000 # Persons per day\n",
     "period = 1\n",
     "duty = 1\n",
-    "# Construction of examination dynamics\n",
-    "psi = Exams(examrate,period,duty) # "
+    "# Construction of vaccination dynamics\n",
+    "psi = 0# \n",
+    "#values = [0,5000,0]\n",
+    "vaccines_init = 30\n",
+    "vaccines_end = 80\n",
+    "vaccines_daily = 10000\n",
+    "days = [[vaccines_init,vaccines_end]]\n",
+    "values = [vaccines_daily]\n",
+    "vaccines = Events.Events(values = values, days = days)\n",
+    "\n",
+    "tot_vaccines = vaccines_daily*(vaccines_end-vaccines_init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.arange(0,120)\n",
+    "f = [vaccines(i) for i in t]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(t,f,label='Vaccines per day')\n",
+    "plt.scatter([],[],label='Total vaccines: '+str(tot_vaccines))\n",
+    "plt.legend(loc=0)\n",
+    "plt.show()"
    ]
   },
   {
@@ -215,18 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "# To show the cell's output comment the former line\n",
     "\n",
-    "\n",
-    "simulation = SEIR(tsim=tsim,alpha=s1.alpha,psi = psi,beta=beta,mu=mu,k_I=k_I,k_R=k_R,I0=I0,population=population,expinfection=0,SeroPrevFactor=1,testaccuracy=testaccuracy)\n",
+    "simulation = SEIRTQM(tsim=tsim,alpha=s1.alpha,beta=beta,mu=mu,I0=I0,population=population,expinfection=0,SeroPrevFactor=1,vac_d=vaccines)\n",
     "simulation.integr_sci(0,tsim,0.01)\n",
     "# No exams dynamic for reference:\n",
-    "simulation_reference =  SEIR(tsim=tsim,alpha=s1.alpha,psi = 0,beta=beta,mu=mu,k_I=k_I,k_R=k_R,I0=I0,population=population,expinfection=0,SeroPrevFactor=1,testaccuracy=testaccuracy)\n",
+    "simulation_reference =  SEIRTQM(tsim=tsim,alpha=s1.alpha,beta=beta,mu=mu,I0=I0,population=population,expinfection=0,SeroPrevFactor=1,vac_d=0)\n",
     "simulation_reference.integr_sci(0,tsim,0.01)\n",
     "print('simulation finished')"
    ]
@@ -240,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,14 +290,36 @@
     "plt.plot(simulation.t,simulation.E,label='E',color = 'cyan')\n",
     "plt.plot(simulation.t,simulation.I,label='I',color = 'red')\n",
     "plt.plot(simulation.t,simulation.R,label='R',color = 'green')\n",
-    "plt.plot(simulation_reference.t,simulation_reference.S,label='S - No exams',color = 'blue',linestyle='dashed')\n",
-    "plt.plot(simulation_reference.t,simulation_reference.E,label='E - No exams',color = 'cyan',linestyle='dashed')\n",
-    "plt.plot(simulation_reference.t,simulation_reference.I,label='I - No exams',color = 'red',linestyle='dashed')\n",
-    "plt.plot(simulation_reference.t,simulation_reference.R,label='R - No exams',color = 'green',linestyle='dashed')\n",
+    "plt.plot(simulation_reference.t,simulation_reference.S,label='S - No Vaccines',color = 'blue',linestyle='dashed')\n",
+    "plt.plot(simulation_reference.t,simulation_reference.E,label='E - No Vaccines',color = 'cyan',linestyle='dashed')\n",
+    "plt.plot(simulation_reference.t,simulation_reference.I,label='I - No Vaccines',color = 'red',linestyle='dashed')\n",
+    "plt.plot(simulation_reference.t,simulation_reference.R,label='R - No Vaccines',color = 'green',linestyle='dashed')\n",
     "\n",
     "plt.title('Epidemiological Plot')\n",
     "plt.legend(loc=0)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-01ce55658141>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msimulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvac_d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/covid19geomodeller/src/SEIR/class_SEIRTQM.py\u001b[0m in \u001b[0;36mauxvac_d\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mauxvac_d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "simulation.vac_d(0)"
    ]
   },
   {
@@ -271,8 +335,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation.t,simulation.I_ac,label='I_ac with exams')\n",
-    "plt.plot(simulation_reference.t,simulation_reference.I_ac,label='I_ac No Exams', linestyle='dashed')\n",
+    "plt.plot(simulation.t,simulation.I_ac,label='I_ac with Vaccines')\n",
+    "plt.plot(simulation_reference.t,simulation_reference.I_ac,label='I_ac No Vaccines', linestyle='dashed')\n",
     "plt.title('Accumulated Infected')\n",
     "plt.legend(loc=0)\n",
     "plt.show()"
@@ -291,31 +355,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation.t,simulation.I_d,label='I_d with exams')\n",
-    "plt.plot(simulation_reference.t,simulation_reference.I_d,label='I_d no exams', linestyle='dashed')\n",
+    "plt.plot(simulation.t,simulation.I_d,label='I_d with Vaccines')\n",
+    "plt.plot(simulation_reference.t,simulation_reference.I_d,label='I_d no Vaccines', linestyle='dashed')\n",
     "plt.title('New Daily Infected')\n",
     "plt.legend(loc=0)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Amount of exams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(simulation.t,simulation.e,label='Exams')\n",
-    "plt.title('Amount of exams performed')\n",
-    "plt.legend(loc=0)\n",
-    "plt.show()\n",
-    "print('We performed '+str(int(np.round(simulation.e[-1])))+' exams in total')"
    ]
   },
   {
@@ -336,8 +380,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examination rate\n",
-    "All examination campaings will have 50% of examination time during the different time periods."
+    "## Vaccination Campaigns \n",
+    "We will simulate different vaccination campaings. We will analyze the pandemic evolution for Immunization campaings with different: \n",
+    "* delay in the beginning of the vac campaign\n",
+    "* Amount of daily vaccines \n",
+    "* Amount of total vaccination "
    ]
   },
   {
@@ -372,7 +419,23 @@
     "\n",
     "psi = [Exams(i,period,duty) for i in examrate] \n",
     "\n",
-    "testaccuracy=0.9"
+    "testaccuracy=0.9\n",
+    "\n",
+    "\n",
+    "examrate = 20000 # Persons per day\n",
+    "period = 1\n",
+    "duty = 1\n",
+    "# Construction of vaccination dynamics\n",
+    "psi = 0# \n",
+    "#values = [0,5000,0]\n",
+    "vaccines_init = 30\n",
+    "vaccines_end = 80\n",
+    "vaccines_daily = 5000\n",
+    "days = [[vaccines_init,vaccines_end]]\n",
+    "values = [vaccines_daily]\n",
+    "vaccines = [Events.Events(values = values, days = days)\n",
+    "\n",
+    "tot_vaccines = vaccines_daily*(vaccines_end-vaccines_init)"
    ]
   },
   {
