last modifications src + first exaples src2

--- a/Examples/SEIR.ipynb
+++ b/Examples/SEIR.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
     "    print('OS not detected :-|')\n",
     "\n",
     "\n",
-    "from class_SEIR import SEIR\n",
+    "from class_SEIR2 import SEIR\n",
     "from Quarantine import Quarantine"
    ]
   },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,18 +150,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Plot quarantines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1 = [s1.alpha(t) for t in range(tsim)]\n",
+    "q2 = [s2.alpha(t) for t in range(tsim)]\n",
+    "q3 = [s3.alpha(t) for t in range(tsim)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(range(tsim),q1,label = 'Constant Quarantine')\n",
+    "plt.plot(range(tsim),q2,label = 'Square Quarantine')\n",
+    "plt.plot(range(tsim),q3,label = 'Sawtooth Quarantine')\n",
+    "plt.ylabel('Mobility')\n",
+    "plt.ylabel('Day')\n",
+    "plt.ylim(0.45,0.85)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create simulation Object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "simulation = []\n",
     "for i in range(len(quarantines)):\n",
-    "    simulation.append(SEIR(tsim=tsim,alpha=quarantines[i],beta=beta,mu=mu,k=k,I=I0,population=population,expinfection=1,SeroPrevFactor=1))\n",
+    "    simulation.append(SEIR(tsim=tsim,alpha=quarantines[i],beta=beta,mu=mu,k=k,I0=I0,population=population,expinfection=1,SeroPrevFactor=1))\n",
     "#simulation = SEIR(tsim=tsim,alpha=s2.alpha,beta=beta,mu=mu,k=k,I0=I0,population=population,expinfection=1,SeroPrevFactor=1)"
    ]
   },
@@ -175,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +367,7 @@
        "       5.82712791e+05, 5.82716910e+05, 5.82717115e+05])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +401,7 @@
        "53737.39093475814"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +422,7 @@
        "182.68419391442006"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
