RM4Mayo fit update

--- a/DataFit/RM_4_Mayo.ipynb
+++ b/DataFit/RM_4_Mayo.ipynb
@@ -255,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe3108cd8e0>"
+       "<matplotlib.legend.Legend at 0x7f3ee2d63e80>"
       ]
      },
      "execution_count": 8,
@@ -861,12 +861,12 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.9s\n",
-      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    2.0s remaining:    4.0s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    2.1s remaining:    2.1s\n",
-      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    2.8s remaining:    1.4s\n",
-      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:    3.2s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:    3.2s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    1.8s remaining:    3.5s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    1.8s remaining:    1.8s\n",
+      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    2.5s remaining:    1.2s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:    2.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:    2.7s finished\n",
       "ready\n"
      ]
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
     "t_end = 50\n",
     "\n",
     "enddate = initdate + timedelta(days=365)\n",
-    "enddate = datetime(2021,12,31)\n",
+    "enddate = datetime(2021,6,30)\n",
     "\n",
     "\n",
     "dates = [[initdate+timedelta(days=int(i)) for i in simulation[j].t] for j in range(len(simulation))]\n",
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "datetime.datetime(2023, 12, 9, 0, 0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
