Research in serial time + model comparison + examdynamics

--- a/research/ExamDynamics/COVID19_Examination_Dynamics.ipynb
+++ b/research/ExamDynamics/COVID19_Examination_Dynamics.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,11 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "simulation finished\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
+    "#%%capture\n",
     "# To show the cell's output comment the former line\n",
     "\n",
     "\n",
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,11 +392,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   2 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   3 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   4 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   5 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   6 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done   7 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done   8 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done   9 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done  10 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done  11 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done  12 tasks      | elapsed:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done  13 tasks      | elapsed:    2.7s\n",
+      "[Parallel(n_jobs=12)]: Done  14 tasks      | elapsed:    2.7s\n",
+      "[Parallel(n_jobs=12)]: Done  15 tasks      | elapsed:    2.8s\n",
+      "[Parallel(n_jobs=12)]: Done  16 tasks      | elapsed:    2.8s\n",
+      "[Parallel(n_jobs=12)]: Done  17 tasks      | elapsed:    2.8s\n",
+      "[Parallel(n_jobs=12)]: Done  18 tasks      | elapsed:    2.8s\n",
+      "[Parallel(n_jobs=12)]: Done  19 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done  20 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done  21 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done  22 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done  23 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done  24 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done  25 tasks      | elapsed:    3.0s\n",
+      "[Parallel(n_jobs=12)]: Done  26 tasks      | elapsed:    3.0s\n",
+      "[Parallel(n_jobs=12)]: Done  27 out of  49 | elapsed:    3.0s remaining:    2.4s\n",
+      "[Parallel(n_jobs=12)]: Done  28 out of  49 | elapsed:    3.0s remaining:    2.2s\n",
+      "[Parallel(n_jobs=12)]: Done  29 out of  49 | elapsed:    3.0s remaining:    2.1s\n",
+      "[Parallel(n_jobs=12)]: Done  30 out of  49 | elapsed:    3.0s remaining:    1.9s\n",
+      "[Parallel(n_jobs=12)]: Done  31 out of  49 | elapsed:    3.0s remaining:    1.8s\n",
+      "[Parallel(n_jobs=12)]: Done  32 out of  49 | elapsed:    3.0s remaining:    1.6s\n",
+      "[Parallel(n_jobs=12)]: Done  33 out of  49 | elapsed:    3.1s remaining:    1.5s\n",
+      "[Parallel(n_jobs=12)]: Done  34 out of  49 | elapsed:    3.1s remaining:    1.4s\n",
+      "[Parallel(n_jobs=12)]: Done  35 out of  49 | elapsed:    3.1s remaining:    1.2s\n",
+      "[Parallel(n_jobs=12)]: Done  36 out of  49 | elapsed:    3.1s remaining:    1.1s\n",
+      "[Parallel(n_jobs=12)]: Done  37 out of  49 | elapsed:    3.1s remaining:    1.0s\n",
+      "[Parallel(n_jobs=12)]: Done  38 out of  49 | elapsed:    3.1s remaining:    0.9s\n",
+      "[Parallel(n_jobs=12)]: Done  39 out of  49 | elapsed:    3.1s remaining:    0.8s\n",
+      "[Parallel(n_jobs=12)]: Done  40 out of  49 | elapsed:    3.2s remaining:    0.7s\n",
+      "[Parallel(n_jobs=12)]: Done  41 out of  49 | elapsed:    3.2s remaining:    0.6s\n",
+      "[Parallel(n_jobs=12)]: Done  42 out of  49 | elapsed:    3.2s remaining:    0.5s\n",
+      "[Parallel(n_jobs=12)]: Done  43 out of  49 | elapsed:    3.2s remaining:    0.4s\n",
+      "[Parallel(n_jobs=12)]: Done  44 out of  49 | elapsed:    3.2s remaining:    0.4s\n",
+      "[Parallel(n_jobs=12)]: Done  45 out of  49 | elapsed:    3.2s remaining:    0.3s\n",
+      "[Parallel(n_jobs=12)]: Done  46 out of  49 | elapsed:    3.2s remaining:    0.2s\n",
+      "[Parallel(n_jobs=12)]: Done  47 out of  49 | elapsed:    3.2s remaining:    0.1s\n",
+      "[Parallel(n_jobs=12)]: Done  49 out of  49 | elapsed:    3.2s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done  49 out of  49 | elapsed:    3.2s finished\n",
+      "ready\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
+    "#%%capture\n",
     "# To show the cell's output comment the former line\n",
     "\n",
     "def simulate(simulation,tsim):\n",
@@ -407,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,9 +623,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/samuel/anaconda3/lib/python3.8/inspect.py:2987: RuntimeWarning: coroutine 'InteractiveShell.run_cell_async' was never awaited\n",
+      "  arg_val = kwargs.pop(param_name)\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    }
+   ],
    "source": [
     "n = 3\n",
     "time = np.arange(0,100,0.1)\n",
@@ -583,11 +659,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.7s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    2.3s remaining:    4.7s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    2.6s remaining:    2.6s\n",
+      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    3.4s remaining:    1.7s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:    9.4s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:    9.4s finished\n",
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.7s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    2.5s remaining:    5.1s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    2.9s remaining:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    3.8s remaining:    1.9s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   10.8s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   10.8s finished\n",
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.9s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    2.6s remaining:    5.2s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    3.0s remaining:    3.0s\n",
+      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    3.9s remaining:    2.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   11.3s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   11.3s finished\n",
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.7s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    2.5s remaining:    5.0s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    2.9s remaining:    2.9s\n",
+      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    4.1s remaining:    2.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   12.5s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   12.5s finished\n",
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.0s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   6 | elapsed:    2.8s remaining:    5.7s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   6 | elapsed:    3.7s remaining:    3.7s\n",
+      "[Parallel(n_jobs=12)]: Done   4 out of   6 | elapsed:    5.0s remaining:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   15.2s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   6 out of   6 | elapsed:   15.2s finished\n",
+      "ready\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
+    "#%%capture\n",
     "# To show the cell's output comment the former line\n",
     "\n",
     "# For parallel simulation\n",
@@ -622,9 +741,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'simulation_reference' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-b942e393ddb6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation_reference\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msimulation_reference\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_d\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'No exams'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'black'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlinestyle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'dashed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperiod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_d\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Examination Period: '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperiod\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'simulation_reference' is not defined"
+     ]
+    }
+   ],
    "source": [
     "j = 0\n",
     "plt.plot(simulation_reference.t,simulation_reference.I_d,label='No exams',color = 'black',linestyle='dashed')\n",
