cv19functions example update

--- a/Examples_2/cv19functions.ipynb
+++ b/Examples_2/cv19functions.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linux\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,11 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#time\n",
+    "#Create time range\n",
     "t = np.arange(0,60,0.01)"
    ]
   },
@@ -71,12 +63,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Events"
+    "## Events\n",
+    "Event function creates a function that returns the values that receives in the \"values\" argument during the ranges that it receives in the \"days\" argument. The function will return 0 during the days not comprehended in the days argument.\n",
+    "* values: A list or numpy array with the values\n",
+    "* days: A list with pairs of values that determine when the function will take the values\n",
+    "\n",
+    "Overlaped day periods will return the sum of the correspondent values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,12 +96,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Periodic functions"
+    "## Periodic functions\n",
+    "Creates functions that return the specified periodic function. It can create square, sine or sawtooth waves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,12 +140,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Continious change"
+    "## Continious change\n",
+    "Create functions that increase their value in the specified fashion. It could be linear, quadratic or sigmoid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,12 +184,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function construtctor"
+    "# Function construtctor\n",
+    "The build function receives a string or dictionarie from which it builds the specified function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,24 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing Events\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "aux = cv19functions.build(constructor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,27 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f98af975700>]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(t,aux_eval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,24 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing sine\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seno = cv19functions.build(constructor_sine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,20 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f98af81a1c0>]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(t,seno_eval)"
    ]
