--- a/Examples_2/cv19functions.ipynb
+++ b/Examples_2/cv19functions.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "Events = cv19functions.Events(values=[0.45,0.85,1.3],days=[[0,10],[10,20],[23,28]])\n",
-    "events_eval = [Events(i) for i in t]"
+    "#events_eval = [Events(i) for i in t]"
    ]
   },
   {
