--- a/Examples/SEIRHVD_basic.ipynb
+++ b/Examples/SEIRHVD_basic.ipynb
@@ -241,9 +241,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38264bit48ae65e862f64697a29185f9fa581b02"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
