--- a/Examples_2/SEIR.ipynb
+++ b/Examples_2/SEIR.ipynb
@@ -8,8 +8,8 @@
     "\\begin{align}\n",
     "\\dot{S} & = S_f - \\alpha\\beta\\frac{SI}{N+k_I I+k_R R} + r_{R\\_S} R\\\\\n",
     "\\dot{E} & = E_f + \\alpha\\beta\\frac{SI}{N+k_I I+k_R R} - E\\frac{1}{t_{E\\_I}} \\\\\n",
-    "\\dot{I} & = E\\frac{1}{t_{E\\_I}} - I\\frac{1}{t_{I\\_R}} \\\\\n",
-    "\\dot{R} & = I\\frac{1}{t_{I\\_R}} - r_{I\\_R} R\\\\\n",
+    "\\dot{I} & = I_f + E\\frac{1}{t_{E\\_I}} - I\\frac{1}{t_{I\\_R}} \\\\\n",
+    "\\dot{R} & = R_f + I\\frac{1}{t_{I\\_R}} - r_{I\\_R} R\\\\\n",
     "\\end{align}\n",
     "Where:  \n",
     "* $S:$ Susceptible\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No external data added\n",
       "SEIR object created\n"
      ]
     }
@@ -190,19 +189,19 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
-       "      <td>987212</td>\n",
-       "      <td>1788</td>\n",
-       "      <td>894</td>\n",
-       "      <td>6000</td>\n",
+       "      <td>986000</td>\n",
        "      <td>3000</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>2999</td>\n",
        "      <td>5000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>894</td>\n",
+       "      <td>1500</td>\n",
        "      <td>18000</td>\n",
        "      <td>0</td>\n",
        "      <td>6000</td>\n",
-       "      <td>3000</td>\n",
+       "      <td>2999</td>\n",
        "      <td>18000</td>\n",
        "      <td>0.018000</td>\n",
        "      <td>0.018000</td>\n",
@@ -212,89 +211,89 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>None</td>\n",
-       "      <td>986046</td>\n",
-       "      <td>2520</td>\n",
-       "      <td>1064</td>\n",
-       "      <td>5842</td>\n",
-       "      <td>1385</td>\n",
-       "      <td>5590</td>\n",
-       "      <td>372</td>\n",
+       "      <td>984813</td>\n",
+       "      <td>3531</td>\n",
+       "      <td>1302</td>\n",
+       "      <td>6052</td>\n",
+       "      <td>1523</td>\n",
+       "      <td>5601</td>\n",
+       "      <td>380</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1958</td>\n",
-       "      <td>19385</td>\n",
-       "      <td>372</td>\n",
-       "      <td>5842</td>\n",
-       "      <td>1385</td>\n",
-       "      <td>19385</td>\n",
-       "      <td>0.019385</td>\n",
-       "      <td>0.019385</td>\n",
-       "      <td>0.019385</td>\n",
+       "      <td>2802</td>\n",
+       "      <td>19523</td>\n",
+       "      <td>380</td>\n",
+       "      <td>6052</td>\n",
+       "      <td>1523</td>\n",
+       "      <td>19523</td>\n",
+       "      <td>0.019523</td>\n",
+       "      <td>0.019523</td>\n",
+       "      <td>0.019523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>None</td>\n",
-       "      <td>984898</td>\n",
-       "      <td>3103</td>\n",
-       "      <td>1116</td>\n",
-       "      <td>5824</td>\n",
-       "      <td>872</td>\n",
-       "      <td>6173</td>\n",
-       "      <td>505</td>\n",
+       "      <td>983609</td>\n",
+       "      <td>3982</td>\n",
+       "      <td>1241</td>\n",
+       "      <td>6193</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>6213</td>\n",
+       "      <td>527</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3075</td>\n",
-       "      <td>20257</td>\n",
-       "      <td>877</td>\n",
-       "      <td>5824</td>\n",
-       "      <td>872</td>\n",
-       "      <td>20257</td>\n",
-       "      <td>0.020258</td>\n",
-       "      <td>0.020258</td>\n",
-       "      <td>0.020258</td>\n",
+       "      <td>4043</td>\n",
+       "      <td>20563</td>\n",
+       "      <td>908</td>\n",
+       "      <td>6193</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>20563</td>\n",
+       "      <td>0.020564</td>\n",
+       "      <td>0.020564</td>\n",
+       "      <td>0.020564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>None</td>\n",
-       "      <td>983744</td>\n",
-       "      <td>3586</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>5909</td>\n",
-       "      <td>749</td>\n",
-       "      <td>6759</td>\n",
-       "      <td>556</td>\n",
+       "      <td>982372</td>\n",
+       "      <td>4382</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>6401</td>\n",
+       "      <td>916</td>\n",
+       "      <td>6842</td>\n",
+       "      <td>592</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4215</td>\n",
-       "      <td>21007</td>\n",
-       "      <td>1434</td>\n",
-       "      <td>5909</td>\n",
-       "      <td>749</td>\n",
-       "      <td>21007</td>\n",
-       "      <td>0.021008</td>\n",
-       "      <td>0.021008</td>\n",
-       "      <td>0.021008</td>\n",
+       "      <td>5284</td>\n",
+       "      <td>21479</td>\n",
+       "      <td>1501</td>\n",
+       "      <td>6401</td>\n",
+       "      <td>916</td>\n",
+       "      <td>21479</td>\n",
+       "      <td>0.021480</td>\n",
+       "      <td>0.021480</td>\n",
+       "      <td>0.021480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>None</td>\n",
-       "      <td>982567</td>\n",
-       "      <td>4003</td>\n",
-       "      <td>1165</td>\n",
-       "      <td>6070</td>\n",
-       "      <td>760</td>\n",
-       "      <td>7357</td>\n",
-       "      <td>583</td>\n",
+       "      <td>981090</td>\n",
+       "      <td>4750</td>\n",
+       "      <td>1269</td>\n",
+       "      <td>6662</td>\n",
+       "      <td>918</td>\n",
+       "      <td>7495</td>\n",
+       "      <td>632</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5381</td>\n",
-       "      <td>21768</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>6070</td>\n",
-       "      <td>760</td>\n",
-       "      <td>21768</td>\n",
-       "      <td>0.021768</td>\n",
-       "      <td>0.021768</td>\n",
-       "      <td>0.021768</td>\n",
+       "      <td>6553</td>\n",
+       "      <td>22398</td>\n",
+       "      <td>2133</td>\n",
+       "      <td>6662</td>\n",
+       "      <td>918</td>\n",
+       "      <td>22398</td>\n",
+       "      <td>0.022398</td>\n",
+       "      <td>0.022398</td>\n",
+       "      <td>0.022398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -322,111 +321,111 @@
        "      <th>495</th>\n",
        "      <td>495</td>\n",
        "      <td>None</td>\n",
-       "      <td>202231</td>\n",
+       "      <td>201828</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>797768</td>\n",
+       "      <td>798171</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>786532</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>792884</td>\n",
+       "      <td>786444</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>793048</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
        "      <td>496</td>\n",
        "      <td>None</td>\n",
-       "      <td>202231</td>\n",
+       "      <td>201828</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>797768</td>\n",
+       "      <td>798171</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>786532</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>792884</td>\n",
+       "      <td>786444</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>793048</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
        "      <td>497</td>\n",
        "      <td>None</td>\n",
-       "      <td>202231</td>\n",
+       "      <td>201828</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>797768</td>\n",
+       "      <td>798171</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>786532</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>792884</td>\n",
+       "      <td>786444</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>793048</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>498</th>\n",
        "      <td>498</td>\n",
        "      <td>None</td>\n",
-       "      <td>202231</td>\n",
+       "      <td>201828</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>797768</td>\n",
+       "      <td>798171</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>786532</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>792884</td>\n",
+       "      <td>786444</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>793048</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
        "      <td>499</td>\n",
        "      <td>None</td>\n",
-       "      <td>202231</td>\n",
+       "      <td>201828</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>797768</td>\n",
+       "      <td>798171</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>786532</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>792884</td>\n",
+       "      <td>786444</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>793048</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
-       "      <td>0.806721</td>\n",
+       "      <td>806823</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
+       "      <td>0.806824</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -435,43 +434,43 @@
       ],
       "text/plain": [
        "       t dates       S     E   E_d     I   I_d       R  R_d  Flux    E_ac  \\\n",
-       "0      0  None  987212  1788   894  6000  3000    5000    0   0.0     894   \n",
-       "1      1  None  986046  2520  1064  5842  1385    5590  372   0.0    1958   \n",
-       "2      2  None  984898  3103  1116  5824   872    6173  505   0.0    3075   \n",
-       "3      3  None  983744  3586  1140  5909   749    6759  556   0.0    4215   \n",
-       "4      4  None  982567  4003  1165  6070   760    7357  583   0.0    5381   \n",
+       "0      0  None  986000  3000  1500  6000  2999    5000    0   0.0    1500   \n",
+       "1      1  None  984813  3531  1302  6052  1523    5601  380   0.0    2802   \n",
+       "2      2  None  983609  3982  1241  6193  1040    6213  527   0.0    4043   \n",
+       "3      3  None  982372  4382  1240  6401   916    6842  592   0.0    5284   \n",
+       "4      4  None  981090  4750  1269  6662   918    7495  632   0.0    6553   \n",
        "..   ...   ...     ...   ...   ...   ...   ...     ...  ...   ...     ...   \n",
-       "495  495  None  202231     0     0     0     0  797768    0   0.0  786532   \n",
-       "496  496  None  202231     0     0     0     0  797768    0   0.0  786532   \n",
-       "497  497  None  202231     0     0     0     0  797768    0   0.0  786532   \n",
-       "498  498  None  202231     0     0     0     0  797768    0   0.0  786532   \n",
-       "499  499  None  202231     0     0     0     0  797768    0   0.0  786532   \n",
+       "495  495  None  201828     0     0     0     0  798171    0   0.0  786444   \n",
+       "496  496  None  201828     0     0     0     0  798171    0   0.0  786444   \n",
+       "497  497  None  201828     0     0     0     0  798171    0   0.0  786444   \n",
+       "498  498  None  201828     0     0     0     0  798171    0   0.0  786444   \n",
+       "499  499  None  201828     0     0     0     0  798171    0   0.0  786444   \n",
        "\n",
        "       I_ac    R_ac  I_det  I_d_det  I_ac_det  prevalence_total  \\\n",
-       "0     18000       0   6000     3000     18000          0.018000   \n",
-       "1     19385     372   5842     1385     19385          0.019385   \n",
-       "2     20257     877   5824      872     20257          0.020258   \n",
-       "3     21007    1434   5909      749     21007          0.021008   \n",
-       "4     21768    2018   6070      760     21768          0.021768   \n",
+       "0     18000       0   6000     2999     18000          0.018000   \n",
+       "1     19523     380   6052     1523     19523          0.019523   \n",
+       "2     20563     908   6193     1040     20563          0.020564   \n",
+       "3     21479    1501   6401      916     21479          0.021480   \n",
+       "4     22398    2133   6662      918     22398          0.022398   \n",
        "..      ...     ...    ...      ...       ...               ...   \n",
-       "495  806721  792884      0        0    806721          0.806721   \n",
-       "496  806721  792884      0        0    806721          0.806721   \n",
-       "497  806721  792884      0        0    806721          0.806721   \n",
-       "498  806721  792884      0        0    806721          0.806721   \n",
-       "499  806721  792884      0        0    806721          0.806721   \n",
+       "495  806823  793048      0        0    806823          0.806824   \n",
+       "496  806823  793048      0        0    806823          0.806824   \n",
+       "497  806823  793048      0        0    806823          0.806824   \n",
+       "498  806823  793048      0        0    806823          0.806824   \n",
+       "499  806823  793048      0        0    806823          0.806824   \n",
        "\n",
        "     prevalence_susc  prevalence_det  \n",
        "0           0.018000        0.018000  \n",
-       "1           0.019385        0.019385  \n",
-       "2           0.020258        0.020258  \n",
-       "3           0.021008        0.021008  \n",
-       "4           0.021768        0.021768  \n",
+       "1           0.019523        0.019523  \n",
+       "2           0.020564        0.020564  \n",
+       "3           0.021480        0.021480  \n",
+       "4           0.022398        0.022398  \n",
        "..               ...             ...  \n",
-       "495         0.806721        0.806721  \n",
-       "496         0.806721        0.806721  \n",
-       "497         0.806721        0.806721  \n",
-       "498         0.806721        0.806721  \n",
-       "499         0.806721        0.806721  \n",
+       "495         0.806824        0.806824  \n",
+       "496         0.806824        0.806824  \n",
+       "497         0.806824        0.806824  \n",
+       "498         0.806824        0.806824  \n",
+       "499         0.806824        0.806824  \n",
        "\n",
        "[500 rows x 19 columns]"
       ]
@@ -535,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,6 +587,13 @@
     "plt.legend(loc=0)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
