--- a/Examples_2/cv19functions.ipynb
+++ b/Examples_2/cv19functions.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linux\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "Events = cv19functions.Events(values=[0.45,0.85,1.3],days=[[0,10],[10,20],[23,28]])\n",
-    "#events_eval = [Events(i) for i in t]"
+    "events_eval = [Events(i) for i in t]"
    ]
   },
   {
